[feat] added gemini AI analyse for getters(courses and vacancies)

--- a/example.env
+++ b/example.env
@@ -5,3 +5,4 @@ JWT_TTL_MINUTES: 60
 JWT_TTL_HOURS: 72
 SECRET_KEY: secret-key
 KEY: 12345678901234567890123456789012
+GEMINI_API_KEY: YOUR_GEMINI_API_KEY
