--- a/example.env
+++ b/example.env
@@ -5,4 +5,5 @@ JWT_TTL_MINUTES: 60
 JWT_TTL_HOURS: 72
 SECRET_KEY: secret-key
 KEY: 12345678901234567890123456789012
+GEMINI_AI_API: YOUR_GEMINI_AI_API
 GEMINI_API_KEY: YOUR_GEMINI_API_KEY
