[feat] added dynamic configs path

--- a/example.env
+++ b/example.env
@@ -7,3 +7,6 @@ SECRET_KEY: secret-key
 KEY: 12345678901234567890123456789012
 GEMINI_AI_API: YOUR_GEMINI_AI_API
 GEMINI_API_KEY: YOUR_GEMINI_API_KEY
+SSL_CERT_PATH=cert/cert.pem
+SSL_KEY_PATH=cert/key.pem
+CONFIG_PATH=configs/configs.json
